Finish class angular paises

--- a/src/app/country/pages/by-region/by-region.component.html
+++ b/src/app/country/pages/by-region/by-region.component.html
@@ -15,3 +15,13 @@
     </button>
   </div>
 </div>
+
+<div class="alert alert-danger" *ngIf="thereIsError">
+  No se encontró nada con el termino {{ activeRegion }}
+</div>
+
+<div class="row" *ngIf="countries.length > 0">
+  <div class="col">
+    <app-country-table [countries]="countries"></app-country-table>
+  </div>
+</div>
