--- a/src/app/country/components/country-table/country-table.component.html
+++ b/src/app/country/components/country-table/country-table.component.html
@@ -9,12 +9,12 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let country of countries; let i = index">
+        <tr *ngFor="let country of countries; let i = index" class="animate__animated animate__fadeIn">
             <td>{{ i + 1}}</td>
             <td>
                 <img class="small-flag" [src]="country.flags.png" [alt]="country.flags.alt">
             </td>
-            <td>{{ country.name.common }} - {{ country.capital[0] }}</td>
+            <td>{{country.name.common}} - {{country.capital}}</td>
             <td>{{ country.population | number}}</td>
             <td>
                 <a [routerLink] = "['/country', country.cca2]">ver ...</a>
