--- a/src/app/country/pages/by-country/by-country.component.html
+++ b/src/app/country/pages/by-country/by-country.component.html
@@ -3,23 +3,38 @@
 <div class="row">
   <div class="col">
     <app-country-input
-      (onEnter)="search( $event )"
-      (onDebounce)="suggest( $event )"
+      (onEnter)="search($event)"
+      (onDebounce)="suggest($event)"
       placeholder="Buscar País"
     >
-
     </app-country-input>
   </div>
 </div>
 
-<hr>
+<ul *ngIf="showSuggest" class="list-group">
+  <li
+    *ngFor="let country of suggestCountries"
+    class="list-group-item list-group-item-action"
+  >
+    <a class="nav-link" [routerLink]="['/country', country.cca2]">{{
+      country.name.common
+    }}</a>
+  </li>
+
+  <li class="list-group-item list-group-item-action"
+    (click)="searchSuggest( term )"
+  >
+    <a class="nav-link"> Buscar "{{ term }}" </a>
+  </li>
+  
+</ul>
 
 <div class="alert alert-danger" *ngIf="thereIsError">
-    No se encontró nada con el termino {{ term }}
+  No se encontró nada con el termino {{ term }}
 </div>
 
 <div class="row" *ngIf="countries.length > 0">
-    <div class="col">
-       <app-country-table [countries]="countries"></app-country-table>
-    </div>
+  <div class="col">
+    <app-country-table [countries]="countries"></app-country-table>
+  </div>
 </div>
